[tool.poetry]
name = "poetry-extensions"
version = "0.1.0"
description = ""
authors = ["likianta <likianta@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
argsense = "^0.5.7"
deptry = "*"
lk-utils = "^2.10.0"
toml = "*"

#: poetry_extensions/make_requirements.py
# depsland = { version = "^0.7.0b0", source = "likianta-host" }
# requests = "*"

[tool.poetry.group.dev.dependencies]
poetry = "*"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "likianta-host"
url = "http://likianta.pro:2006/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
